add translations and chat listener

--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -1,2 +1,6 @@
 schat.command.misc.none=None
 schat.command.channel.join.error=Unable to join the channel: {0}
+schat.command.channel.join.success=Joined the channel: {0}
+schat.chat.no-active-channel=No active channel to send a message to
+schat.suggest.command.join-channel=Join a channel with {0}
+schat.hover.join-channel=Click to join the channel
