--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -1,6 +1,25 @@
+#
+# sChat, a Supercharged Minecraft Chat Plugin
+# Copyright (C) Silthus <https://www.github.com/silthus>
+# Copyright (C) sChat team and contributors
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <https://www.gnu.org/licenses/>.
+#
+
 schat.command.misc.none=None
 schat.command.channel.join.error=Unable to join the channel: {0}
 schat.command.channel.join.success=Joined the channel: {0}
-schat.chat.no-active-channel=No active channel to send a message to
+schat.chat.no-active-channel=No active channel
 schat.suggest.command.join-channel=Join a channel with {0}
 schat.hover.join-channel=Click to join the channel
