--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -20,6 +20,9 @@
 schat.command.misc.none=None
 schat.command.channel.join.error=Unable to join the channel: {0}
 schat.command.channel.join.success=Joined the channel: {0}
+schat.command.pm.cannot-send-to-self=You cannot chat with yourself, sorry :(
+
 schat.chat.no-active-channel=No active channel
+
 schat.suggest.command.join-channel=Join a channel with {0}
 schat.hover.join-channel=Click to join the channel
