feat: add /leave channel command

--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -18,8 +18,11 @@
 #
 
 schat.command.misc.none=None
-schat.command.channel.join.error=Unable to join the channel: {0}
 schat.command.channel.join.success=Joined the channel: {0}
+schat.command.channel.join.error=Unable to join the channel: {0}
+schat.command.channel.leave.success=Left the channel: {0}
+schat.command.channel.leave.error=Unable to leave the channel: {0}
+
 schat.command.pm.cannot-send-to-self=You cannot chat with yourself, sorry :(
 
 schat.chat.no-active-channel=No active channel
