refactor: split view into tabs

--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -31,3 +31,4 @@ schat.chat.private.you=You
 schat.suggest.command.join-channel=Join a channel with {0}
 schat.hover.join-channel=Click to join the channel: {0}.
 
+schat.view.no-channels=You are in no channels.
