feat(cmd): add non distributive /schat reload command

--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -18,6 +18,7 @@
 #
 
 schat.command.misc.none=None
+schat.command.reload=Reloaded the sChat configuration and plugin
 schat.command.channel.join.success=Joined the channel: {0}
 schat.command.channel.join.error=Unable to join the channel: {0}
 schat.command.channel.leave.success=Left the channel: {0}
