--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -31,5 +31,6 @@ schat.chat.private.you=You
 
 schat.suggest.command.join-channel=Join a channel with {0}
 schat.hover.join-channel=Click to join the channel: {0}.
+schat.hover.leave-channel=Click to leave the channel: {0}.
 
 schat.view.no-channels=You are in no channels.
