--- a/platform/src/main/resources/schat_en.properties
+++ b/platform/src/main/resources/schat_en.properties
@@ -27,7 +27,7 @@ schat.command.channel.leave.error=Unable to leave the channel: {0}
 schat.command.pm.cannot-send-to-self=You cannot chat with yourself, sorry :(
 
 schat.chat.no-active-channel=No active channel
-schat.chat.private.you=You
+schat.chat.message.you=You
 
 schat.suggest.command.join-channel=Join a channel with {0}
 schat.hover.join-channel=Click to join the channel: {0}.
